--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=7777
 #API_KEY=https://apinhatbao.onrender.com/webblockchain
 API_KEY=https://apinhatbao.kinhtexanh.id.vn
+#API_USER=https://apiuser.vds.io.vn
 API_USER=https://apiuser.vds.io.vn
 URL=http://localhost:7777
 keySecret=vnds
